{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 902,
  "lineage": "befb24f2-d0a5-e59f-2dfc-ad9fdc2e78b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511160954537:internet-gateway/igw-024f3cba1f2bbe912",
            "id": "igw-024f3cba1f2bbe912",
            "owner_id": "511160954537",
            "tags": {
              "Name": "proj-IGW"
            },
            "tags_all": {
              "Name": "proj-IGW"
            },
            "vpc_id": "vpc-0a8a04101d48afad3"
          },
          "dependencies": [
            "aws_vpc.proj-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:511160954537:loadbalancer/app/proj-asg-alb/3390f30000ece7f4",
            "arn_suffix": "app/proj-asg-alb/3390f30000ece7f4",
            "desync_mitigation_mode": "defensive",
            "dns_name": "proj-asg-alb-1185483483.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:511160954537:loadbalancer/app/proj-asg-alb/3390f30000ece7f4",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "proj-asg-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-04d769476d5389ac6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04162b29234fb91a4"
              },
              {
                "subnet_id": "subnet-0cddfe15e132ce041"
              }
            ],
            "subnets": [
              "subnet-04162b29234fb91a4",
              "subnet-0cddfe15e132ce041"
            ],
            "tags": {
              "Environment": "AutoscalingNGINXProject-lb-sg"
            },
            "tags_all": {
              "Environment": "AutoscalingNGINXProject-lb-sg"
            },
            "vpc_id": "vpc-0a8a04101d48afad3",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.ec2-sg",
            "aws_subnet.proj-Subnet1",
            "aws_subnet.proj-Subnet2",
            "aws_vpc.proj-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "proj-RouteTable-Private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511160954537:route-table/rtb-0a6f689155a5fd893",
            "id": "rtb-0a6f689155a5fd893",
            "owner_id": "511160954537",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024f3cba1f2bbe912",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8a04101d48afad3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.proj-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "proj-associatedVPS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03631bd30259aa4d4",
            "route_table_id": "rtb-0a6f689155a5fd893",
            "subnet_id": "subnet-04162b29234fb91a4"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.proj-RouteTable-Private",
            "aws_subnet.proj-Subnet1",
            "aws_vpc.proj-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "proj-associatedVPS1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000d258f3d3369ee",
            "route_table_id": "rtb-0a6f689155a5fd893",
            "subnet_id": "subnet-0cddfe15e132ce041"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.proj-RouteTable-Private",
            "aws_subnet.proj-Subnet2",
            "aws_vpc.proj-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511160954537:security-group/sg-04d769476d5389ac6",
            "description": "Autoscaling project instance security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d769476d5389ac6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ssh-nginx-sg",
            "name_prefix": "",
            "owner_id": "511160954537",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a8a04101d48afad3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.proj-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "proj-Subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511160954537:subnet/subnet-04162b29234fb91a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04162b29234fb91a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511160954537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a8a04101d48afad3"
          },
          "dependencies": [
            "aws_vpc.proj-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "proj-Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511160954537:subnet/subnet-0cddfe15e132ce041",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cddfe15e132ce041",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511160954537",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a8a04101d48afad3"
          },
          "dependencies": [
            "aws_vpc.proj-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "proj-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:511160954537:vpc/vpc-0a8a04101d48afad3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03be9c2de2ee1681d",
            "default_route_table_id": "rtb-0119a285774622a31",
            "default_security_group_id": "sg-0aba1739f04fac5c8",
            "dhcp_options_id": "dopt-0de4798f2afab9c94",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a8a04101d48afad3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0119a285774622a31",
            "owner_id": "511160954537",
            "tags": {
              "Name": "proj-VPC"
            },
            "tags_all": {
              "Name": "proj-VPC"
            }
          }
        }
      ]
    }
  ]
}